<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/ui"
    tools:context=".FirstFragment"
    tools:ignore="ExtraText">



    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            android:background="@drawable/custom">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/welcome"
                    android:textAlignment="center"
                    android:textColor="@color/pink_dark"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/descrio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:fontFamily="casual"
                    android:text="@string/befvid"
                    android:textAlignment="center"
                    android:textColor="@color/pink_dark"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/descrion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="casual"
                    android:text="@string/beffvid"
                    android:textAlignment="center"
                    android:textColor="@color/pink"
                    android:textSize="10sp"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:textColor="@color/pink_dark"
                    android:text="Video"
                    android:id="@+id/button"
                    android:layout_marginStart="65dp"/>

                <TextView
                    android:id="@+id/descriotionu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="casual"
                    android:padding="10dp"
                    android:text="@string/overv"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/pink_dark"
                    android:textAllCaps="true"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/descriotion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom"
                    android:fontFamily="casual"
                    android:padding="10dp"
                    android:text="@string/home_desc"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/pink"
                    android:textSize="14sp" />






            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>






</FrameLayout>