<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity"
    android:background="@drawable/ui"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/back"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:background="@drawable/custom"
        android:fontFamily="casual"

        android:text="About Us"
        android:textAllCaps="true"
        android:padding="20dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/pink_dark"
        android:textSize="30sp"
        android:textStyle="bold"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="25dp"
        android:elevation="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/red"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/about_us"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="35dp"
            android:fontFamily="sans-serif"
            android:textSize="12dp"
            android:layout_gravity="center"
            android:textColor="@color/pink_dark"/>

        <TextView
            android:layout_width="330dp"
            android:layout_height="120dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="left"
            android:text="@string/descreptAlHanof"/>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="25dp"
        android:elevation="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/rew"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/about_us2"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="35dp"
            android:fontFamily="sans-serif"
            android:textSize="12dp"
            android:layout_gravity="center"
            android:textColor="@color/pink_dark"/>

        <TextView
            android:layout_width="330dp"
            android:layout_height="120dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="left"
            android:text="@string/descreptRuba"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="25dp"
        android:elevation="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/pic"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/about_us3"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="35dp"
            android:fontFamily="sans-serif"
            android:textSize="12dp"
            android:layout_gravity="center"
            android:textColor="@color/pink_dark"/>

        <TextView
            android:layout_width="330dp"
            android:layout_height="120dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="left"
            android:text="@string/descreptAlHanof"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>